[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/number_display.tscn" type="PackedScene" id=2]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 196, 0 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="SideBar" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 199.0
margin_bottom = 280.0
alignment = 1

[node name="EvaluationLabel" type="Label" parent="ScrollContainer/SideBar"]
margin_right = 199.0
margin_bottom = 14.0
rect_min_size = Vector2( 192, 0 )
text = "EVALUATION"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/SideBar"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 18.0
margin_right = 199.0
margin_bottom = 22.0

[node name="DegreeDisplay" parent="ScrollContainer/SideBar" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 26.0
margin_right = 199.0
margin_bottom = 50.0
startup_label_text = "Degree"
round_to_integers = true
startup_min = 1.0
startup_max = 9.0

[node name="ResolutionDisplay" parent="ScrollContainer/SideBar" instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 54.0
margin_right = 199.0
margin_bottom = 78.0
startup_label_text = "Resolution"
round_to_integers = true
startup_min = 2.0
startup_max = 1024.0

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/SideBar"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 82.0
margin_right = 199.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 24 )

[node name="KnotsLabel" type="Label" parent="ScrollContainer/SideBar"]
margin_top = 110.0
margin_right = 199.0
margin_bottom = 124.0
rect_min_size = Vector2( 192, 0 )
text = "KNOTS"
align = 1
valign = 1

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/SideBar"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 128.0
margin_right = 199.0
margin_bottom = 132.0

[node name="CurveConnectionsButton" type="CheckButton" parent="ScrollContainer/SideBar"]
unique_name_in_owner = true
margin_top = 136.0
margin_right = 199.0
margin_bottom = 176.0
text = "Curve Connections"
align = 1
icon_align = 1

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/SideBar"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 180.0
margin_right = 199.0
margin_bottom = 184.0

[node name="KnotGenLabel" type="Label" parent="ScrollContainer/SideBar"]
margin_top = 188.0
margin_right = 199.0
margin_bottom = 202.0
rect_min_size = Vector2( 192, 0 )
text = "Generation Mode"
align = 1
valign = 1

[node name="KnotGenDropdown" type="OptionButton" parent="ScrollContainer/SideBar"]
unique_name_in_owner = true
margin_top = 206.0
margin_right = 199.0
margin_bottom = 226.0

[node name="KnotGenButton" type="Button" parent="ScrollContainer/SideBar"]
unique_name_in_owner = true
margin_top = 230.0
margin_right = 199.0
margin_bottom = 250.0
text = "Reset Knots"

[node name="HSeparator5" type="HSeparator" parent="ScrollContainer/SideBar"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 254.0
margin_right = 199.0
margin_bottom = 258.0

[node name="KnotVectorLabel" type="Label" parent="ScrollContainer/SideBar"]
margin_top = 262.0
margin_right = 199.0
margin_bottom = 276.0
rect_min_size = Vector2( 192, 0 )
text = "Knot Vector"
align = 1
valign = 1

[node name="KnotVector" type="VBoxContainer" parent="ScrollContainer/SideBar"]
unique_name_in_owner = true
margin_top = 280.0
margin_right = 199.0
margin_bottom = 280.0
